plugins {
	id 'java-library'
	id 'maven-publish'
	id 'org.springframework.boot' version "${springBootVersion}"
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'com.vaadin'
	id 'idea'
}

repositories {
	mavenLocal()
	maven {
		url = uri('https://repo.maven.apache.org/maven2/')
	}

	maven {
		url = uri('https://maven.vaadin.com/vaadin-prereleases/')
	}

	maven {
		url = uri('https://maven.vaadin.com/vaadin-addons')
	}
}

dependencies {
	api "com.vaadin:vaadin:${vaadinVersion}"
	api "com.vaadin:vaadin-spring-boot-starter:${vaadinVersion}"
	api "org.springframework.boot:spring-boot-starter-validation:${springBootVersion}"
	api "org.springframework.boot:spring-boot-devtools:${springBootVersion}"
	testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
	testImplementation "com.vaadin:vaadin-testbench:${vaadinVersion}"
	testImplementation "org.junit.vintage:junit-vintage-engine:5.8.2"
	testImplementation "io.github.bonigarcia:webdrivermanager:5.1.1"
}

group = 'com.jumpmind'
version = '3.7.9-SNAPSHOT'
sourceCompatibility = '11'

publishing {
	publications {
		maven(MavenPublication) {
			from(components.java)
		}
	}
}

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
	options.encoding = 'UTF-8'
}
